Added more sonatype requirements